payment-platform-infra/kubernetes/payment-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-core-deployment
  namespace: default
  labels:
    app: payment-core
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-core
  template:
    metadata:
      labels:
        app: payment-core
    spec:
      containers:
      - name: payment-core
        image: payment-orchestrator-core:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
