payment-platform-infra/kubernetes/payment-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-core-service
  namespace: default
  labels:
    app: payment-core
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: payment-core
